[gd_scene format=3 uid="uid://cuykjqm5hmc5l"]

[ext_resource type="Texture2D" uid="uid://7rpgl5q5d88r" path="res://assets/book.png" id="1_80nbo"]
[ext_resource type="Script" uid="uid://b5wkw6e4j517l" path="res://game.gd" id="1_fc0e3"]
[ext_resource type="Texture2D" uid="uid://blx0a2ein24c7" path="res://assets/exit button.png" id="3_7jktm"]
[ext_resource type="Texture2D" uid="uid://cxkn6kbch4pds" path="res://assets/party socks.png" id="3_hve3p"]
[ext_resource type="Texture2D" uid="uid://isi7ansh2iek" path="res://assets/camera.png" id="4_mfdv2"]
[ext_resource type="Texture2D" uid="uid://bkr8rkqyqipag" path="res://assets/help.png" id="4_ryrav"]
[ext_resource type="Texture2D" uid="uid://4h2bk2xa6wyb" path="res://assets/blue section.png" id="5_eow3j"]
[ext_resource type="Texture2D" uid="uid://ch3m8ncdd43mb" path="res://assets/yellow section.png" id="6_j5wjh"]
[ext_resource type="Texture2D" uid="uid://cedayfo4n6k8e" path="res://assets/red section.png" id="7_vef74"]
[ext_resource type="FontFile" uid="uid://ctdnq7lw3r6s4" path="res://fonts/Spicy Sale.otf" id="9_hve3p"]

[node name="Game" type="Node2D" unique_id=1560944956]
script = ExtResource("1_fc0e3")

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=1449537960]
offset_right = 993.0
offset_bottom = 627.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer" unique_id=1094898433]
layout_mode = 2

[node name="Book" type="Sprite2D" parent="MarginContainer/VBoxContainer" unique_id=1400640625]
position = Vector2(531, 340.00003)
scale = Vector2(1.474, 1.565)
texture = ExtResource("1_80nbo")

[node name="PartySocks" type="Sprite2D" parent="MarginContainer/VBoxContainer/Book" unique_id=1302695515]
position = Vector2(-93.6228, 27.476013)
scale = Vector2(0.678426, 0.6389776)
texture = ExtResource("3_hve3p")

[node name="Camera" type="Sprite2D" parent="MarginContainer/VBoxContainer/Book" unique_id=910727200]
position = Vector2(99.72863, -84.345055)
scale = Vector2(0.5032768, 0.44500226)
texture = ExtResource("4_mfdv2")

[node name="exit" type="Button" parent="MarginContainer/VBoxContainer/Book" unique_id=254491764]
anchors_preset = -1
anchor_left = 0.483
anchor_top = 0.458
anchor_right = 0.483
anchor_bottom = 0.458
offset_left = -98.9011
offset_top = -290.04
offset_right = -72.9011
offset_bottom = -264.04
icon = ExtResource("3_7jktm")
flat = true

[node name="help" type="Button" parent="MarginContainer/VBoxContainer/Book" unique_id=1330651097]
offset_left = 247.0
offset_top = 103.682
offset_right = 273.0
offset_bottom = 129.682
icon = ExtResource("4_ryrav")
flat = true

[node name="blue" type="Button" parent="MarginContainer/VBoxContainer/Book" unique_id=927850267]
offset_left = 267.222
offset_top = -99.3694
offset_right = 317.222
offset_bottom = -64.3694
icon = ExtResource("5_eow3j")
flat = true

[node name="red" type="Button" parent="MarginContainer/VBoxContainer/Book" unique_id=123858921]
offset_left = 267.222
offset_top = -29.798
offset_right = 314.222
offset_bottom = 5.20197
icon = ExtResource("6_j5wjh")
flat = true

[node name="yellow" type="Button" parent="MarginContainer/VBoxContainer/Book" unique_id=836804210]
offset_left = 267.222
offset_top = -65.2658
offset_right = 311.222
offset_bottom = -30.2658
icon = ExtResource("7_vef74")
flat = true

[node name="play" type="Button" parent="MarginContainer/VBoxContainer/Book" unique_id=255959262]
offset_left = 52.238792
offset_top = -85.62304
offset_right = 102.23879
offset_bottom = -59.62304
rotation = -0.061208192
theme_override_colors/font_color = Color(0.98794764, 0.91893005, 1.540184e-06, 1)
theme_override_colors/font_outline_color = Color(0.38928655, 0.38928664, 0.38928658, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("9_hve3p")
theme_override_font_sizes/font_size = 15
text = "PLAY "
flat = true

[node name="title" type="Label" parent="MarginContainer/VBoxContainer/Book" unique_id=1266040855]
offset_left = -270.692
offset_top = -132.26839
offset_right = -44.691986
offset_bottom = -69.26839
theme_override_colors/font_color = Color(0.28629375, 0.69542676, 0.88780195, 1)
theme_override_fonts/font = ExtResource("9_hve3p")
theme_override_font_sizes/font_size = 28
text = "BIRTHDAYS"
horizontal_alignment = 1

[connection signal="pressed" from="MarginContainer/VBoxContainer/Book/exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Book/help" to="." method="_on_help_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Book/blue" to="." method="_on_blue_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Book/play" to="." method="_on_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Book/play" to="." method="_on_play_pressed"]
